# corl2018_Diffeo

./: README  README_NEW
cpp/: CMakeLists.txt  diffeoInterface.cpp
cpp/includes/Eigen/: Core
cpp/includes/Eigen/src/Core/: CoreIterators.h
cpp/src/: c1Kernel.h  c1Kernel_temp.h  cauchyKernel.h  combinedDiffeoCtrl.h  combinedDynamics.h  constants.h  convergenceUtils.h  convergenceUtilsFix.h  convergenceUtilsFix_Temp.h  diffeoCtrl.h  diffeoLib.h  diffeoUtils.h  fileVector.cpp  fileVector.h  gaussianKernel.h  gmm.h  localWeightDef.h  minContJerkKernel.h  minContJerkKernel_temp.h  myUtils.h  polyEval.h  schlepilUtils.cpp  schlepilUtils.h
data/Angle/: dt_1.txt  dt_2.txt  dt_3.txt  dt_4.txt  dt_5.txt  dt_6.txt  dt_7.txt  t_1.txt  (+20 more)
python/: DEMOS.py  angleUtils.py  c1PolyKerMod.py  combineDemo2d.py  combinedDynamics.py  coreUtils.py  cppInterface.py  ctrlSpaceDyn.py  diffeoSearch.py  diffeoSearchCombined.py  diffeoUtils.py  distribution.py  dynamics.py  easyUtils.py  fileUtils.py  gmmDynamics.py  greedyInsertion.py  interpolateDynamicsTest.py  interpolatePy.py  iterativeLearning.py  modifiedEM.py  multiprocessingTools.py  myNorms.py  mySpline.py  otherUtils.py  parameters.py  plotUtils.py  polyDiffeo.py  polyKer.py  polyKer2.py  polyKer3.py  polyKer4.py  polyKerCompiled.py  polyKerCompiled2.py  polyKerCompiled2Temp.py  polyKerCompiled3.py  polyKerCompiled3Temp.py  polyKerCompiled4.py  polyKerCompiled4Temp.py  polyKerCompiledTemp.py  (+4 more)
results/: mainPars.py  optsMatching.json  optsSeries.json  otherOptions.json  parsDyn.json  parsWeights.json
tempResults/: pos.txt  vel.txt
(+693 files in other folders)
